# flash_attn_lib

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  catalyst_memo  check.py  readme.md  test.py  track_if.cpp  track_if.py
csrc/: flash_attn.cpp  flash_attn.h
docker/flexflow/: Dockerfile  install_pytorch.sh  readme
docker/test_pip_install_flash_attn/: Dockerfile  readme
model/: readme.md  test.py
test/: test.cpp  test_mha_fwd.cpp  test_mha_fwd_bwd.cpp  test_mha_fwd_bwd_wrapper_1.cpp  test_mha_fwd_bwd_wrapper_2.cpp  test_run_mha_bwd.cpp  test_run_mha_fwd.cpp
test_cpp_if/: CMakeLists.txt  CmakeLists.txt  build.sh  env.sh  py-cpp-interface.md  readme  readme.md
test_cpp_if/libs/: CMakeLists.txt  CmakeLists.txt  readme
test_cpp_if/tests/: CMakeLists.txt  CmakeLists.txt  readme  readme.md  test.cpp
test_python_if/: py-interface.md  test.py  test_built_attn.py  test_local_flashattn.py  test_torch_attention.py  test_torch_attention_loadQKV.py
